--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -119,14 +119,14 @@
                 <div class="navbar-nav me-auto p-4 p-lg-0">
                     <!--Navigation Links for the different Pages-->
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="/About" class="nav-item nav-link">About Us</a>
-                    <a href="/MyWork" class="nav-item nav-link">My Work</a>
-                    <a href="/Contact" class="nav-item nav-link">Contact Us</a>
-                    <a href="/Products" class="nav-item nav-link">Admin Login</a>
+                    <a href="/About/AboutUs" class="nav-item nav-link">About Us</a>
+                    <a href="/MyWork/MyWork" class="nav-item nav-link">My Work</a>
+                    <a href="/Contact/ContactUs" class="nav-item nav-link">Contact Us</a>
+                    <a href="/Products/" class="nav-item nav-link">Admin Login</a>
                 </div>
-                @* <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <partial name="_LoginPartial" />
-                </div> *@
+                </div>
             </div>
         </nav>
 
