--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -119,9 +119,9 @@
                 <div class="navbar-nav me-auto p-4 p-lg-0">
                     <!--Navigation Links for the different Pages-->
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="/About/AboutUs" class="nav-item nav-link">About Us</a>
-                    <a href="/MyWork/MyWork" class="nav-item nav-link">My Work</a>
-                    <a href="/Contact/ContactUs" class="nav-item nav-link">Contact Us</a>
+                    <a href="/About/" class="nav-item nav-link">About Us</a>
+                    <a href="/MyWork/" class="nav-item nav-link">My Work</a>
+                    <a href="/Contact/" class="nav-item nav-link">Contact Us</a>
                     <a href="/Products/" class="nav-item nav-link">Admin Login</a>
                 </div>
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
@@ -164,9 +164,9 @@
                     <div class="col-lg-4 col-md-4">
                         <h4 class="text-light mb-4">Quick Links</h4>
                         <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        <a class="btn btn-link" asp-area="" asp-controller="About" asp-action="AboutUs">About Us</a>
-                        <a class="btn btn-link" asp-area="" asp-controller="MyWork" asp-action="MyWork">My Work</a>
-                        <a class="btn btn-link" asp-area="" asp-controller="Contact" asp-action="ContactUs">Contact Us</a>
+                        <a class="btn btn-link" asp-area="" asp-controller="About" asp-action="Index">About Us</a>
+                        <a class="btn btn-link" asp-area="" asp-controller="MyWork" asp-action="Index">My Work</a>
+                        <a class="btn btn-link" asp-area="" asp-controller="Contact" asp-action="Index">Contact Us</a>
                     </div>
                 </div>
             </div>
