Added Roles and Authorization

--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -16,10 +16,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Users">Clients</a>
-                <li class="nav-item">
-                    <a class="nav-link" ref="/AppRoles/">Roles</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/AppRoles/">Roles</a>
+                </li>
+                
             </ul>
         </div>
     </div>
