Login and Reg Styling. Links added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">Welcome To KhumaloCraft</h5>
                             <h1 class="display-3 text-white animated slideInDown mb-4">Crafting Connections & Creating Communities</h1>
                             <p class="fs-5 fw-medium text-white mb-4 pb-2">We are a South African born company dedicated to providing artician services and building handcrafted projects</p>
-                            <a href="/About/AboutUs" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                            <a href="/About/" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/About/AboutUs" class="btn btn-primary py-3 px-5">Explore More</a>
+                    <a href="/About/" class="btn btn-primary py-3 px-5">Explore More</a>
                 </div>
             </div>
         </div>
