--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,6 +123,7 @@
                     <a href="/MyWork/" class="nav-item nav-link">My Work</a>
                     <a href="/Contact/" class="nav-item nav-link">Contact Us</a>
                     <a href="/Products/" class="nav-item nav-link">Admin Login</a>
+                    <a href="/OrderRequests/OrderHistory/" class="nav-item nav-link">My Orders</a>
                 </div>
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <partial name="_LoginPartial" />
@@ -159,7 +160,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <h4 class="text-light mb-4">My Work</h4>
-                        <a class="btn btn-link" asp-controller="MyWork" asp-action="MyWork">View Craftwork</a>
+                        <a class="btn btn-link" asp-controller="MyWork" asp-action="Index">View Craftwork</a>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <h4 class="text-light mb-4">Quick Links</h4>
