Shop cart and admin work

--- a/Views/MyWork/Index.cshtml
+++ b/Views/MyWork/Index.cshtml
@@ -51,6 +51,14 @@ Date Accessed: 16 March 2024
     </div>
 </div>
 <!-- Page Header End -->
+<!-- Add a button to view the shopping cart -->
+<div class="container text-center mb-4">
+    <a href="@Url.Action("Cart", "MyWork")" class="btn btn-primary">
+        <i class="fa fa-shopping-cart"></i> View Shopping Cart
+    </a>
+</div>
+
+
 <!-- Projects Start -->
 <div class="container-xxl py-5">
     <div class="container">
