--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -12,10 +12,10 @@
                     <a class="nav-link" href="/Products">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/OrderRequests/Admin">Order Requests</a>
+                    <a class="nav-link" href="/Orders/Admin">Order Status</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Users">Clients</a>
+                    <a class="nav-link" href="/OrderRequests">Order Requests</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/AppRoles/">Roles</a>
