--- a/Views/OrderRequests/Index.cshtml
+++ b/Views/OrderRequests/Index.cshtml
@@ -3,7 +3,27 @@
 @{
     ViewData["Title"] = "Index";
 }
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Products">Products</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Orders/Admin">Order Status</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/OrderRequests">Order Requests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/AppRoles/">Roles</a>
+                </li>
 
+            </ul>
+        </div>
+    </div>
+</nav>
 <h1>Index</h1>
 
 <p>
