--- a/Views/Orders/OrderHistory.cshtml
+++ b/Views/Orders/OrderHistory.cshtml
@@ -1,17 +1,14 @@
 ﻿@model IEnumerable<Khumalo_Craft_P2.Models.OrderHistoryViewModel>
-
 @{
     ViewData["Title"] = "Order History";
 }
 <div class="container-products">
 <h2>Order History</h2>
 
-<table class="table table-striped">
+    <table class="table table-striped">
     <thead>
         <tr>
             <th>Order ID</th>
-            <th>Product Name</th>
-            <th>Product Price</th>
             <th>Order Date</th>
             <th>Order Status</th>
         </tr>
@@ -21,16 +18,13 @@
         {
             <tr>
                 <td>@order.OrderId</td>
-                <td>@order.ProductName</td>
-                <td>R @order.ProductPrice.ToString("0.00")</td>
-                <td>@order.OrderDate.ToString("MM/dd/yyyy")</td>
-                <td>@order.OrderStatus</td>
+                <td>@order.OrderDate</td>
+                <td>@order.Status</td>
             </tr>
         }
     </tbody>
 </table>
 </div>
-
 <style>
 body {
         font-family: Arial, sans-serif;
