--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                     <a href="/MyWork/" class="nav-item nav-link">My Work</a>
                     <a href="/Contact/" class="nav-item nav-link">Contact Us</a>
                     <a href="/Products/" class="nav-item nav-link">Admin Login</a>
-                    <a href="/OrderRequests/OrderHistory/" class="nav-item nav-link">My Orders</a>
+                    <a href="/Orders/OrderHistory/" class="nav-item nav-link">My Orders</a>
                 </div>
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <partial name="_LoginPartial" />
