--- a/Views/Orders/Admin.cshtml
+++ b/Views/Orders/Admin.cshtml
@@ -50,7 +50,7 @@
                     }
                     else
                     {
-                        <span>Approved</span>
+                        <span></span>
                     }
                 </td>
             </tr>
