Updated a linked for contact

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -143,7 +143,7 @@
                     <p>Learn more about the talented artisans behind the beautiful craftwork showcased on our platform.</p>
 
                     <h3>Get in Touch</h3>
-                    <p>If you have any questions or would like to learn more about KhumaloCraft Emporium, please don't hesitate to <a href="/Contact/ContactUs">contact us</a>.</p>
+                    <p>If you have any questions or would like to learn more about KhumaloCraft Emporium, please don't hesitate to <a href="/Contact/">contact us</a>.</p>
                 </div>
             </div>
         </div>
