Spelling error fix

--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -27,7 +27,7 @@
 </nav>
 
 <div class="container-products">
-    <h1>Product Invetory</h1>
+    <h1>Product Inventory</h1>
 
     <a class="create-new" asp-action="Create">Create New</a>
 
