--- a/Views/Orders/Admin.cshtml
+++ b/Views/Orders/Admin.cshtml
@@ -23,43 +23,46 @@
 </nav>
 
 <div class="container-products">
-<h2>Admin - Orders</h2>
+    <h2>Admin - Orders</h2>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Order Date</th>
-            <th>User Email</th>
-            <th>Status</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var order in Model)
-        {
+    <table class="table">
+        <thead>
             <tr>
-                <td>@order.OrderId</td>
-                <td>@order.OrderDate</td>
-                <td>@order.UserEmail</td>
-                <td>@order.Status</td>
-                <td>
-                    @if (order.Status == "Pending")
-                    {
-                        <a asp-action="ProcessOrder" asp-route-id="@order.OrderId" class="btn btn-primary">Approve Order</a>
-                    }
-                    else
-                    {
-                        <span></span>
-                    }
-                </td>
+                <th>Order ID</th>
+                <th>Order Date</th>
+                <th>User Email</th>
+                <th>Total Price</th>
+                <th>Status</th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var order in Model)
+            {
+                <tr>
+                    <td>@order.OrderId</td>
+                    <td>@order.OrderDate</td>
+                    <td>@order.UserEmail</td>
+                    <td>R @(order.TotalPrice.ToString("0.00"))</td>
+                    <td>@order.Status</td>
+
+                    <td>
+                        @if (order.Status == "Pending")
+                        {
+                            <a asp-action="ProcessOrder" asp-route-id="@order.OrderId" class="btn btn-primary">Approve Order</a>
+                        }
+                        else
+                        {
+                            <span></span>
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
 <style>
-                body {
+    body {
         background-color: #f5f5f5; /* Light gray background color */
         margin: 0;
         padding: 0;
