--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,34 @@
  Link: https://www.w3schools.com/js/
  Date Accessed: 16 March 2024
 
+ --Used for Authorization and Authethication--
+ Author: Digital TechJoint
+ Link: https://www.youtube.com/watch?v=ghzvSROMo_M
+ Date Accessed: 26 May 2024
+
+ Author: Digital TechJoint
+ Link: https://www.youtube.com/watch?v=qvsWwwq2ynE
+ Date Accessed: 26 May 2024
+
+  --Used for Authorization and Authethication--
+ Author: Digital TechJoint
+ Link: https://www.youtube.com/watch?v=ghzvSROMo_M
+ Date Accessed: 26 May 2024
+
+ Author: Digital TechJoint
+ Link: https://www.youtube.com/watch?v=qvsWwwq2ynE
+ Date Accessed: 26 May 2024
+
+ --Used for MVC Scafolding and Search functionality--
+ Author: Microsoft
+ Link: https://learn.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/validation?view=aspnetcore-8.0
+ Date Accessed: 26 May 2024
+
+ --Used for Probelm Solving--
+ Author: StackOverflow
+ Link: https://stackoverflow.com/questions/61309742/blazor-getting-error-by-clicking-login-menu-on-webassembly-server-project
+ Date Accessed: 26 May 2024
+
  *********All Images used throughout project are adapted from Pinterest (https://za.pinterest.com/)*************
 
  ==============================Code Attribution==================================
